fix: adjust navbar z-index

--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -7,6 +7,7 @@
   padding: 8px 20px;
   width: 100%;
   background-color: var(--primary-transparent);
+  z-index: 1000;
 }
 
 .navbar .container {
